tests/sksl/errors/golden/BadCaps.glsl
### Compilation failed:

error: 1: unknown capability flag 'bugFreeDriver'
1 error
